--- a/alecture/package.json
+++ b/alecture/package.json
@@ -16,12 +16,15 @@
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-mentions": "^4.1.3",
+    "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mentions": "^4.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.4",
@@ -35,6 +38,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@loadable/component": "^5.15.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
+    "@types/autosize": "^4.0.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^14.14.31",
