--- a/alecture/package.json
+++ b/alecture/package.json
@@ -21,8 +21,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.6",
     "gravatar": "^1.8.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.3.0",
     "react-router": "^5.2.0",
@@ -43,6 +45,7 @@
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^14.14.31",
+    "@types/react-custom-scrollbars": "^4.0.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^1.4.35",
     "@types/webpack": "^5.28.0",
